# robot_properties_teststand

./: .gitignore  CMakeLists.txt  package.xml  readme.md  setup.cfg  setup.py
config/: dgm_parameters.yaml  teststand.yaml
demos/: bullet_teststand.py  demo_simulate_teststand.py
launch/: teststand_dashboard.launch
resource/dynamic_graph_manager/: dgm_parameters.yaml
resource/launch/: teststand_bringup.launch  teststand_rviz.launch
resource/pre_generated_urdf/: single_leg.urdf  teststand.urdf
resource/xacro/: single_leg.urdf.xacro
src/: py_robot_properties_teststand
src/py_robot_properties_teststand/: config.py  teststand_wrapper.py
src/robot_properties_teststand/: __init__.py  config.py  teststand_wrapper.py  utils.py
src/robot_properties_teststand/resources/rviz/: teststand.rviz
src/robot_properties_teststand/resources/xacro/: leg.xacro  teststand.urdf.xacro
src/robot_properties_teststand/robot_properties_teststand/dynamic_graph_manager/: dgm_parameters_teststand.yaml
src/robot_properties_teststand/robot_properties_teststand/odri_control_interface/: teststand_driver.yaml
src/robot_properties_teststand/robot_properties_teststand/pre_generated_urdf/: teststand.urdf
src/robot_properties_teststand/robot_properties_teststand/xacro/: leg.xacro  teststand.urdf.xacro  teststand_no_prismatic.urdf.xacro
urdf/: plane_with_restitution.urdf
xacro/: single_leg.urdf.xacro  teststand.urdf.xacro
xacro_include/: leg.xacro
