<?xml version="1.0"?>
<package>
  <name>robot_properties_teststand</name>
  <version>1.0.0</version>
  <description>robot_properties_teststand</description>
  <author email="jviereck@tuebingen.mpg.de">Julian Viereck</author>
  <maintainer email="jviereck@tuebingen.mpg.de">Julian Viereck</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- We need the xacro package to build the urdf model -->
  <build_depend> xacro </build_depend>
  <run_depend>   xacro </run_depend>

  <export>
  </export>
</package>
